--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ and is in no way endorsed by said user.-->
     .two-p-font{
       font-size:1rem;
     }
-    .rpg-header{
+    .rpgDialog{
+      font-size:.85rem;
 
     }
     .game-con{
@@ -57,7 +58,7 @@ and is in no way endorsed by said user.-->
     #statusCon{
       border: 1px solid #111111;
       width:60%;
-      font-size:1rem;
+      font-size:.85rem;
 
     }
     #statusCon.fade{
