--- a/index.html
+++ b/index.html
@@ -797,7 +797,56 @@ and is in no way endorsed by said user.-->
       setTimeout(function() {cyoa.data.statValues[0] -=45;}, cyoa.data.timing1);
       setTimeout(function() {cyoa.sounds.loseAudio.play();}, cyoa.data.timing1);
       setTimeout(function() {cyoa.funk.updateStats();}, cyoa.data.timing1);
-      setTimeout(function() {cyoa.data.pMake1.textContent = "You"}, cyoa.data.timing2);
+      setTimeout(function() {cyoa.data.pMake1.textContent = "You walk out to the car and fumble your keys a few times, but manage to open the door and start the engine. Easing the car out onto the street, you look in your rear-view mirror - and promptly crash into a police car."}, cyoa.data.timing2);
+      setTimeout(function() {cyoa.data.pMake2.textContent = "You are subject to a GOMOR, lose thousands of dollars in fees, fines and added costs, and it looks like you won't have a career any more."}, cyoa.data.timing3);
+      setTimeout(function() {cyoa.data.pMake3.textContent = "GAME OVER"}, cyoa.data.timing4);
+      cyoa.funk.optSetReset();
+      setTimeout(cyoa.funk.enableClick, cyoa.data.timing4);
+    }
+    cyoa.funk.sn3_x_bDia = function(){
+      setTimeout(function() {cyoa.data.pMake0.textContent = "-$24,265 -5FUN -20 Reasoning -10 Perception -45HP"}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[4] -=24265;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[3] -=5;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[2] -=10;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[1] -=20;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[0] -=45;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.sounds.loseAudio.play();}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.funk.updateStats();}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.pMake1.textContent = "WOOO! Apparently, one too many vodka+energy drink combos lead you to live your life a quarter mile at a time - a very quick quarter mile which ends with you running straight into the guardrail."}, cyoa.data.timing2);
+      setTimeout(function() {cyoa.data.pMake2.textContent = "Fortunately, no one dies - however, You are subject to a GOMOR, lose thousands of dollars in fees, fines and added costs, and it looks like you won't have a career any more."}, cyoa.data.timing3);
+      setTimeout(function() {cyoa.data.pMake3.textContent = "GAME OVER"}, cyoa.data.timing4);
+      cyoa.funk.optSetReset();
+      setTimeout(cyoa.funk.enableClick, cyoa.data.timing4);
+    }
+    cyoa.funk.sn3_x_cDia = function(){
+      setTimeout(function() {cyoa.data.pMake0.textContent = "-$24,265 -5FUN -20 Reasoning -10 Perception -45HP"}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[4] -=24265;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[3] -=5;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[2] -=10;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[1] -=20;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[0] -=45;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.sounds.loseAudio.play();}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.funk.updateStats();}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.pMake1.textContent = "You decide to drive home slowly, so you'll have more time to react. Unfortunately, due to your low perception, you forgot to turn on the lights and you get rear-ended. A police vehicle arrives at the scene, and determines that you were driving under the influence of intoxicants."}, cyoa.data.timing2);
+      setTimeout(function() {cyoa.data.pMake2.textContent = "You are subject to a GOMOR, lose thousands of dollars in fees, fines and added costs, and it looks like you won't have a career any more."}, cyoa.data.timing3);
+      setTimeout(function() {cyoa.data.pMake3.textContent = "GAME OVER"}, cyoa.data.timing4);
+      cyoa.funk.optSetReset();
+      setTimeout(cyoa.funk.enableClick, cyoa.data.timing4);
+    }
+    cyoa.funk.sn3_x_dDia = function(){
+      setTimeout(function() {cyoa.data.pMake0.textContent = "-$24,265 -5FUN -20 Reasoning -10 Perception -45HP"}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[4] -=24265;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[3] -=5;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[2] -=10;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[1] -=20;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.statValues[0] -=45;}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.sounds.loseAudio.play();}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.funk.updateStats();}, cyoa.data.timing1);
+      setTimeout(function() {cyoa.data.pMake1.textContent = "While holding yourself in a pose of nearly perfect sobriety, you don't see the moose until it's too late - for the moose. The people in your car survive the crash, but if you'd run into another vehicle you could have killed someone."}, cyoa.data.timing2);
+      setTimeout(function() {cyoa.data.pMake2.textContent = "You are subject to a GOMOR, lose thousands of dollars in fees, fines and added costs, and it looks like you won't have a career any more. Fortunately, no one died."}, cyoa.data.timing3);
+      setTimeout(function() {cyoa.data.pMake3.textContent = "GAME OVER"}, cyoa.data.timing4);
+      cyoa.funk.optSetReset();
+      setTimeout(cyoa.funk.enableClick, cyoa.data.timing4);
     }
 
 
