FWA BOSS link fix

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ and is in no way endorsed by said user.-->
           alt="BOSS logo, 8-bit style" class="game_logos"><br>
           Click or tap for BOSS programs on;
     <a href="http://jberlife.com/boss/" target="_blank" class="game_my_1">JBER</a>  
-    <a href="http://jberlife.com/boss/" target="_blank" class="game_my_1">FWA</a>
+    <a href="https://www.facebook.com/FortWainwrightBOSS/" target="_blank" class="game_my_1">FWA</a>
   </p>
   <p class="two-p-font-dark hidden" id="oap_link"><img
           src="mountainpixel.png"
