--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ opacity: 1;
       cyoa.sounds.pewAudio.play();
       cyoa.data.statValues[3] +=10;
       cyoa.funk.updateStats();
-      cyoa.funk.imgWin();
+      cyoa.funk.binkyWin();
       setTimeout(function() {cyoa.data.pMake0.textContent = "+10 FUN"}, cyoa.data.timing1);
       setTimeout(function() {cyoa.data.pMake1.textContent = "Watching the tournament was pretty enjoyable, plus you got free snacks."}, cyoa.data.timing2);
       setTimeout(function() {cyoa.data.pMake3.textContent = "Sgt. Binky managed to win the entire competition, even without opposable thumbs."}, cyoa.data.timing3);
